# firebird

./: .gitmodules  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/btcontract/wallet/: ChainLinkSpec.scala  GraphSpec.scala  NativeLibsSpec.java  NativeSpec.scala  PathfinderSpec.scala  PaymentDbSpec.scala  PaymentMasterSpec.scala  PaymentRequestSpec.scala  SyncSpec.scala
app/src/main/: AndroidManifest.xml
app/src/main/cpp/libscrypt/: CMakeLists.txt
app/src/main/cpp/libscrypt/src/: config.h
app/src/main/cpp/libscrypt/src/secp256k1/: libsecp256k1-config.h
app/src/main/cpp/libscrypt/src/swig_java/: swig.i
app/src/main/cpp/libwally-core/: .gitignore  CMakeLists.txt
app/src/main/cpp/libwally-core/src/: config.h
app/src/main/cpp/libwally-core/src/test/: test_wif.py
app/src/main/cpp/secp256k1/: CMakeLists.txt
app/src/main/java/com/arlib/floatingsearchview/: FloatingSearchView.java
app/src/main/java/com/aurelhubert/ahbottomnavigation/: AHBottomNavigation.java
app/src/main/java/org/bitcoin/: NativeSecp256k1.java
app/src/main/res/anim/: fragment_enter.xml  fragment_exit.xml  fragment_pop_enter.xml  fragment_pop_exit.xml  shake.xml
app/src/main/res/drawable/: ic_add_black_24dp.xml  ic_check.xml  ic_check_white_24dp.xml  ic_fingerprint_white_24dp.xml  ic_scan.xml  ic_settings_white_24dp.xml  ic_shopping_black_24dp.xml  ic_wallet_black_24dp.xml  splash.xml
app/src/main/res/layout/: activity_hub.xml  activity_main.xml  activity_setup.xml  content_main.xml  float_test.xml  frag_email_password.xml  frag_input_fiat_converter.xml  frag_input_with_info.xml  frag_list.xml  frag_mnemonic.xml  frag_payment_line.xml  frag_progress_bar.xml  frag_step_account.xml  frag_step_choose.xml  frag_step_open.xml  frag_top_tip.xml  layout_cookie.xml  multi_choice_item_left.xml  search_dialog_compat.xml  sheet_scanner.xml  step_layout.xml  vertical_stepper_form_layout.xml  vertical_stepper_item_view_layout.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
(+141 files in other folders)
